Updated the Invalid User Ejs File

--- a/views/InvalidUserId.ejs
+++ b/views/InvalidUserId.ejs
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>404 - Page Not Found</h1>
+      <h1>404 - Card Not Found</h1>
       <p>Sorry, Invalid User Id.</p>
     </div>
   </body>
